# ThinkingInPython

./: .gitattributes  .gitignore  .hgignore  .python-version  .vale.ini  ADVERSARIAL.md  CLAUDE.md  CONTRIBUTING.md  DeveloperGuide.rst  FEATURES_TO_INTRODUCE.md  GeneratorsIterators.rst  ISSUES.md  MachineDiscovery.rst  Makefile  NOTES.md  P3P1-hg.odg  PROOFREADING_FINDINGS.md  PROOFREADING_PROGRESS.md  PUBLISHING_PLAN.md  Part1.rst  Part3.rst  README.md  RESTRUCTURE_PROGRESS.md  REVIEW.md  REVIEW_02.md  REVIEW_03.md  REVIEW_04.md  REVIEW_05.md  REVIEW_06.md  REVIEW_07.md  REVIEW_08.md  REVIEW_12.md  REVIEW_13.md  REVIEW_14.md  SENTENCE_DELETIONS.md  TeachingSupport.rst  UPGRADING_NOTES.md  _OUTPUT_VALIDATOR.md  _TODO.md  build.bat  (+13 more)
.claude/: settings.json
.zed/: settings.json
Chapters/: 01_Introduction.md  02_Tour.md  03_Containers.md  04_Control_Flow.md  05_Functions.md  06_Modules_and_Packages.md  07_Classes.md  08_Static_Typing.md  09_Class_Attributes.md  10_Cleanup.md  11_Testing.md  12_Data_Classes_as_Types.md  13_Pattern_Matching.md  14_Decorators.md  15_Context_Managers.md  16_Comprehensions.md  17_Metaprogramming.md  18_Performance.md  19_Concurrency.md  20_Rethinking_Objects.md  21_The_Pattern_Concept.md  22_Data_Transfer_Objects.md  23_Iterators.md  24_Singleton.md  25_Template_Method.md  26_Surrogate.md  27_Factory.md  28_Function_Objects.md  29_Changing_the_Interface.md  30_Observer.md  31_State_Machines.md  32_Multiple_Dispatching.md  33_Visitor.md  34_Composite_and_Interpreter.md  35_Flyweight.md  36_Memento.md  37_Pattern_Refactoring.md  38_Simulation.md  39_Pattern_Catalog.md  40_Functional_Foundations.md  (+8 more)
Examples/: CodeManager.py  SanityCheck.py  display.py  exceptions.py  test_class.py
Markdown/: 00_Contributors.md  00_Front.md  01_Introduction.md  01_NoteToReaders.md  02_A_Python_Tour.md  02_Introduction.md  02_Python_for_Programmers.md  02_Tour.md  03_Containers.md  03_Containers_and_Control_Flow.md  03_Data_Classes_as_Types.md  03_Initialization_and_Cleanup.md  03_Teaching_Support.md  04_Control_Flow.md  04_Data_Classes_as_Types.md  04_Functional_Error_Handling.md  04_Functions.md  04_Initialization_and_Cleanup.md  04_Rules.md  04_Static_Type_Checking.md  04_Testing.md  05_Data_Classes_as_Types.md  05_Decorators.md  05_Functional_Error_Handling.md  05_Functions.md  05_Modules_and_Packages.md  05_Part1.md  05_Testing.md  06_Classes.md  06_Decorators.md  06_Functional_Error_Handling.md  06_Modules_and_Packages.md  06_PythonForProgrammers.md  07_Class_Attributes_and_Cleanup.md  07_Classes.md  07_Comprehensions.md  07_Decorators.md  07_InitializationAndCleanup.md  07_Initialization_and_Cleanup.md  07_Metaprogramming.md  (+278 more)
Solutions/: 02_Tour.md  03_Containers.md  04_Control_Flow.md  05_Functions.md  06_Modules_and_Packages.md  07_Classes.md  08_Static_Typing.md  09_Class_Attributes.md  10_Cleanup.md  11_Testing.md  12_Data_Classes_as_Types.md  13_Pattern_Matching.md  14_Functional_Error_Handling.md  15_Context_Managers.md  15_Decorators.md  17_Comprehensions.md  17_Metaprogramming.md  19_Concurrency.md  19_Performance.md  20_Rethinking_Objects.md  21_Rethinking_Objects.md  22_Data_Transfer_Objects.md  23_Iterators.md  24_Singleton.md  25_Template_Method.md  26_Surrogate.md  27_State_Machines.md  28_Function_Objects.md  28_Iterators.md  29_Changing_the_Interface.md  29_Factory.md  30_Function_Objects.md  30_Observer.md  31_Changing_the_Interface.md  31_State_Machines.md  32_Observer.md  33_Multiple_Dispatching.md  33_Visitor.md  34_Composite_and_Interpreter.md  34_Visitor.md  (+8 more)
_templates/: layout.html
code/: CodeManager.py  SanityCheck.py
html/: AppFrameworks.html  CanonicalScript.html  ChangeInterface.html  Comprehensions.html  Contributors.html  CoroutinesAndConcurrency.html  Decorator.html  DeveloperGuide.html  Factory.html  Fronting.html  FunctionObjects.html  GeneratorsIterators.html  InitializationAndCleanup.html  Introduction.html  Iterators.html  Jython.html  LanguageChanges.html  MachineDiscovery.html  Messenger.html  Metaclasses.html  MultipleDispatching.html  NoteToReaders.html  Observer.html  Part1.html  Part2.html  Part3.html  PatternConcept.html  PatternRefactoring.html  Projects.html  PythonDecorators.html  PythonForProgrammers.html  QuickPython.html  Rules.html  Singleton.html  StateMachine.html  TableDriven.html  TeachingSupport.html  ToDo.html  UnitTesting.html  Visitor.html  (+24 more)
residual/: 02_Teaching_Support.md  11_Jython.md  README.md
rust/: Makefile  README.md
rust/fastcount/: .gitignore  Cargo.toml  demo.py  pyproject.toml
rust/fastcount/src/: lib.rs
src/: CodeManager.py  Comprehensions.rst  Contributors.rst  CoroutinesAndConcurrency.rst  Decorator.rst  DeveloperGuide.rst  Fronting.rst  FunctionalProgramming.rst  GeneratorsIterators.rst  Introduction.rst  Iterators.rst  Jython.rst  LanguageChanges.rst  Makefile  Metaclasses.rst  Metaprogramming.rst  MultipleDispatching.rst  NoteToReaders.rst  Part2.rst  PatternConcept.rst  PatternRefactoring.rst  Projects.rst  PythonDecorators.rst  PythonForProgrammers.rst  QuickPython.rst  SanityCheck.py  TeachingSupport.rst  ToDo.rst  Todo.txt  UnitTesting.rst  Visitor.rst  build.py  changes.txt  conf.py  factory.rst  fronting.rst  index.rst  observer.rst  projects.rst  quickPython.rst  (+2 more)
tools/: README.md  _codeword_scan.py  banned_phrases.py  banned_phrases.txt  build_site.py  capitalize_comments.py  check_anchors.py  check_line_endings.py  check_links.py  check_tools.py  codespell-ignore.txt  comment_caps_allow.txt  comment_periods.py  comment_spacing.py  convert_to_markdown.py  doctor.py  examples_baseline.txt  extract_examples.py  extract_rust.py  extract_solutions.py  fix_imports.py  list_todos.py  listing_format.py  make_help.py  md_prose.py  norun.txt  prose_lint.py  reflow_prose.py  run_all.py  run_examples.py  serve.py  spellcheck.py  test_fix_imports.py  tools_config.py  (+8 more)
(+2049 files in other folders)
