# uv-managed tooling for building and checking the book's examples.
# This is not a distributable package (package = false); it only pins the
# Python version and the dev tools the harness and CI use.
#
# Common commands:
#   uv sync                                  # create .venv with the dev tools
#   uv run python tools/run_examples.py      # run any harness script
#   uv run ty check ExtractedExamples        # type-check
#   make ci                                  # the full local gate (uses uv)
#
# pandoc is a system package (see tools/README.md), not a Python dependency.

[project]
name = "thinking-in-python"
version = "0"
description = "Build and verification tooling for the book Thinking in Python."
requires-python = ">=3.14"

[dependency-groups]
dev = ["ty", "pytest", "ruff"]

[tool.uv]
package = false

# PEP 8 linting for the examples. line-length is 70 to match the book's HTML
# listing box, not ruff's default 88. ruff runs as an advisory CI step.
[tool.ruff]
line-length = 70
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "N", "I", "UP"]
# N818: exception names need not end in "Error" (author preference).
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# This example deliberately demonstrates printf-style % formatting.
"**/string_formatting.py" = ["UP031"]
