# uv-managed tooling for building and checking the book's examples.
# This is not a distributable package (package = false); it only pins the
# Python version and the dev tools the harness and CI use.
#
# Common commands:
#   uv sync                                  # create .venv with the dev tools
#   uv run python tools/run_examples.py      # run any harness script
#   uv run ty check build/examples           # type-check
#   make ci                                  # the full local gate (uses uv)
#
# pandoc is a system package (see tools/README.md), not a Python dependency.

[project]
name = "thinking-in-python"
version = "0"
description = "Build and verification tooling for the book Thinking in Python."
requires-python = ">=3.15"

[dependency-groups]
dev = [
    "ty",
    "pytest",
    "pytest-xdist",
    "ruff",
    "codespell>=2.4.2",
    "time-machine",
    "pyspellchecker",
    "hypothesis>=6.155.7",
]

[tool.uv]
package = false

# Spell checking for the book prose (and code comments). codespell uses a
# curated misspelling dictionary, so it is low-noise even over code. Words it
# flags wrongly (design-pattern terms, foreign quotes, deliberate code strings)
# live in tools/codespell-ignore.txt. Run with `make spell`.
[tool.codespell]
ignore-words = "tools/codespell-ignore.txt"
skip = "./.git,./.venv,./build,./resources,./uv.lock,*.gif,*.png"

# PEP 8 linting for the examples. line-length is 70 to match the book's HTML
# listing box, not ruff's default 88. ruff runs as an advisory CI step.
[tool.ruff]
line-length = 70
# target-version is inferred from requires-python (>=3.15); don't duplicate it.

[tool.ruff.lint]
# The "A" (flake8-builtins) family flags a builtin used as an identifier: a
# variable or function name (A001), argument (A002), class attribute (A003),
# import alias (A004), module/filename (A005), or lambda argument (A006).
select = ["E", "W", "F", "N", "I", "UP", "A"]
# N818: exception names need not end in "Error" (author preference).
ignore = ["N818"]

# Keep imports grouped and sorted, but drop the blank line between groups so
# listings stay dense (the book favors fewer blank lines in print and online).
[tool.ruff.lint.isort]
no-lines-before = [
    "future", "standard-library", "third-party", "first-party", "local-folder",
]
lines-after-imports = 1

[tool.ruff.lint.per-file-ignores]
# This example deliberately demonstrates printf-style % formatting.
"**/string_formatting.py" = ["UP031"]
# Decorators written as classes use the lowercase decorator naming
# convention (@trace, @count_calls, @repeat), not CapWords.
"**/trace_class.py" = ["N801"]
"**/count_calls.py" = ["N801"]
"**/repeat_class.py" = ["N801"]
"**/trace_counting.py" = ["N801"]
"**/banner_cm.py" = ["N801"]
# This example exists to show that importing a module runs its top-level
# code; the imported name is intentionally unused.
"**/import_module.py" = ["F401"]
# This example deliberately demonstrates assigning a lambda to a name.
"**/lambdas.py" = ["E731"]

# Examples run with cwd set to their chapter dir; adding the tree root to the
# import path lets test files import shared helpers (display.py) kept there.
[tool.pytest.ini_options]
pythonpath = ["build/examples"]
